# Learning-ROM-Latent-Force

./: .gitignore  README.md  pyproject.toml
configs/finger/physics/: extrap_physics_finger.yaml  extrap_physics_params_scale_amp_finger.yaml  extrap_physics_scale_amp_finger.yaml  recon_physics_finger.yaml  (+2 more)
notebooks/Pendulum/: pendulum_testing.ipynb  physics_baseline.ipynb
notebooks/Shallow_Water/: CWI_Training_PEGP_VAE_Sin.ipynb  CWI_Training_RBF_VAE_Latent_Sin.ipynb  CWI_Training_RBF_VAE_Sin.ipynb  CWI_Training_VAE_Latent_Sin.ipynb  CWI_Training_VAE_Sin.ipynb  no_cutoff_CWI_Training_PEGP_VAE_Latent_Sin.ipynb  no_subtract_CWI_Training_PEGP_VAE_Latent_Sin.ipynb  subtract_CWI_Training_PEGP_VAE_Latent_Sin.ipynb
scripts/: constant_water_inflow_data_generation.py  constant_water_inflow_frame_generation.py
scripts/finger_training/: collect_test.py  physics.py  rbf.py  run_physics_baseline.sh  run_physics_extrap.sh  run_physics_params.sh  run_physics_recon.sh  run_rbf_extrap.sh  run_rbf_recon.sh  run_vae_extrap.sh  run_vae_recon.sh  vae.py
scripts/pendulum_data_gen/: pendulum_data_generation.py
scripts/pendulum_training/: collect_test.py  physics.py  rbf.py  run_physics_baseline.sh  run_physics_baseline222.sh  run_physics_extrap.sh  run_physics_extrap222.sh  run_physics_recon.sh  run_physics_recon222.sh  run_rbf_extrap.sh  run_rbf_recon.sh  run_vae_recon.sh  vae.py
scripts/shallow_water/: constant_water_inflow_frame_generation.py
src/learning_dynamics/: callbacks.py  data_modules.py  datasets.py  functions.py  models.py  transforms.py
(+41 files in other folders)
