[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning_dynamics"
version = "0.0.1"
authors = [
  {name="Kendra Givens", email="kendralee157@gmail.com"},
]
description = "Learning dynanmics with unknown external latent force"

readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "lightning[pytorch-extra] >= 2.4.0",
  "torch >= 2.5.0",
  "pdebench @ git+https://github.com/KendraGivens/PDEBench.git"
]

[project.urls]
"Homepage" = "https://github.com/KendraGivens/Learning-Dynamics-Latent-Force"
"Bug Tracker" = "https://github.com/KendraGivens/Learning-Dynamics-Latent-Force/issues"

[tool.ruff]
line-length = 100